--- a/acc/imports/ui/reports/transactionDetail/transactionDetail.html
+++ b/acc/imports/ui/reports/transactionDetail/transactionDetail.html
@@ -1,6 +1,8 @@
-<template name="acc_cashReport">
+<template name="acc_transactionDetailReport">
+
     <div class="box-body">
-        {{#autoForm schema=schema id="acc_cashReport"  action="cashReportGen" target="_blank"}}
+        {{#autoForm schema=schema id="acc_transactionDetailReport"  action="transactionDetailReportGen"
+                    target="_blank"}}
             <div class="animated fadeIn">
                 <div class="box box-primary direct-chat direct-chat-success">
                     <div class="box-header with-border">
@@ -9,7 +11,8 @@
                                     class="font-head-panel-en">Form</span></h3>
 
                         <div class="box-tools pull-right">
-                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i
+                                    class="fa fa-minus"></i>
                             </button>
                         </div>
                     </div>
@@ -18,14 +21,15 @@
 
                         <div class="row " style="background: rgb(227, 234, 243); padding: 10px; margin: 0;">
                             <div class="col-md-6">
-                                {{> afQuickField name='branchId'}}
-                                {{> afQuickField name='currencyId'}}
-                                {{> afQuickField name='transactionType'}}
+                                {{> afQuickField name='branchId' value=param.branchId}}
+                                {{> afQuickField name='currencyId' value=param.currencyId}}
+                                {{> afQuickField name='date' value=param.date}}
+                                {{> afQuickField name='exchangeDate'  value=param.exchangeDate}}
                             </div>
 
                             <div class="col-md-6">
-                                {{> afQuickField name='date'}}
-                                {{> afQuickField name='exchangeDate'}}
+                                {{> afQuickField name='accountType' size=10 value=param.accountType id=accountType}}
+                                {{> afQuickField name='chartAccount' value=param.chartAccount}}
                             </div>
 
                         </div>
@@ -39,13 +43,15 @@
                 </div>
             </div>
         {{/autoForm}}
-        {{> acc_cashReportPrintData}}
+        {{> acc_transactionDetailReportPrintData}}
+
     </div>
+
 </template>
 
 
 <!--Generate-->
-<template name="acc_cashReportGen">
+<template name="acc_transactionDetailReportGen">
 
     <!--Is ready-->
     {{#if data}}
@@ -58,7 +64,7 @@
                     <div class="title">
                         <div class="title-1x-kh-muol">{{khName}}</div>
                         <div class="title-1x">{{enName}}</div>
-                        <div><u>Cash Report</u></div>
+                        <div><u>Transaction Detail By Item Report</u></div>
                         <div class="title-2x">{{enAddress}}</div>
                     </div>
                 {{/with}}
@@ -100,9 +106,8 @@
                         <th width="40px">No</th>
                         <th>Date</th>
                         <th>Invoice</th>
-                        <th>Name</th>
                         <th>Memo</th>
-                        <!--<th>Split Account</th>-->
+                        <th>Split Account</th>
                         <th>Debit</th>
                         <th>Credit</th>
                         <!--<th>Amount</th>-->
@@ -141,7 +146,7 @@
                                 </tr>
                             {{else}}
 
-                                <tr>
+                                <tr class="journalRow report-pointer">
                                     <td align="center">
                                         {{order}}
                                     </td>
@@ -152,14 +157,11 @@
                                         {{voucherId}}
                                     </td>
                                     <td align="left">
-                                        {{cusAndVenname}}
-                                    </td>
-                                    <td align="left">
                                         {{memo}}
                                     </td>
-                                    <!--<td align="left" class="report-pointer">-->
-                                        <!--<span class="split-account-detail" style="cursor: pointer">{{name}}</span>-->
-                                    <!--</td>-->
+                                    <td align="left">
+                                        <span class="split-account-detail" style="cursor: pointer">{{name}}</span>
+                                    </td>
                                     <td align="right">
                                         {{getCurrency currencyId}}{{formatMoneyNormal dr}}
                                     </td>
@@ -176,7 +178,7 @@
                             {{/if}}
                         {{/if}}
                     {{/each}}
-                    <tr style="background-color:lavender;">
+                    <!--<tr style="background-color:gray;">
                         <td colspan="5" align="left">
                             <b>Total</b>
                         </td>
@@ -186,13 +188,13 @@
                         <td align="right">
                             <b>{{getCurrency content.currencyId}}{{formatMoneyNormal endingCr}}</b>
                         </td>
-                        <!--<td align="right">
+                        &lt;!&ndash;<td align="right">
                             <b>{{getCurrency content.currencyId}}{{formatMoneyNormal endingAmount}}</b>
-                        </td>-->
+                        </td>&ndash;&gt;
                         <td align="right">
                             <b>{{getCurrency content.currencyId}}{{formatMoneyNormal endingBalance}}</b>
                         </td>
-                    </tr>
+                    </tr>-->
                     </tbody>
                 </table>
 
@@ -211,9 +213,10 @@
 
 </template>
 
+
 <!--Run-->
-<template name="acc_cashReportPrintData">
-    <!--#print-data-->
+<template name="acc_transactionDetailReportPrintData">
+
     <div id="print-data">
         <div class="sub-div display-on-print-div">
             {{#if rptInit}}
@@ -222,14 +225,14 @@
 
                         <!--Title-->
                         {{#with title}}
+
                             <div class="rpt-title">
                                 <div class="rpt-title-3x rpt-kh-muol">{{khName}}</div>
                                 <div class="rpt-title-2x">{{enName}}</div>
-                                <div class="rpt-title-2x"><u>Cash Report</u></div>
+                                <div class="rpt-title-2x"><u>Transaction Detail By Item Report</u></div>
                                 <div class="rpt-title-2x">{{enAddress}}</div>
                             </div>
                         {{/with}}
-
 
                         <!--Header-->
                         {{#with header}}
@@ -262,15 +265,14 @@
                         {{/with}}
 
                         <!--Content-->
-                        <table class="sub-table table table-striped table-hover diplay-on-print-table">
+                        <table class="sub-table table table-striped  table-hover diplay-on-print-table" border="1">
                             <thead class="sub-header diplay-on-print-header">
                             <tr>
                                 <th width="40px">No</th>
                                 <th>Date</th>
                                 <th>Invoice</th>
-                                <th>Name</th>
                                 <th>Memo</th>
-                                <!--<th>Split Account</th>-->
+                                <th>Split Account</th>
                                 <th>Debit</th>
                                 <th>Credit</th>
                                 <!--<th>Amount</th>-->
@@ -309,7 +311,7 @@
                                         </tr>
                                     {{else}}
 
-                                        <tr>
+                                        <tr class="journalRow report-pointer">
                                             <td align="center">
                                                 {{order}}
                                             </td>
@@ -320,14 +322,12 @@
                                                 {{voucherId}}
                                             </td>
                                             <td align="left">
-                                                {{cusAndVenname}}
-                                            </td>
-                                            <td align="left">
                                                 {{memo}}
                                             </td>
-                                            <!--<td align="left" class="report-pointer">-->
-                                            <!--<span class="split-account-detail" style="cursor: pointer">{{name}}</span>-->
-                                            <!--</td>-->
+                                            <td align="left">
+                                                <span class="split-account-detail"
+                                                      style="cursor: pointer">{{name}}</span>
+                                            </td>
                                             <td align="right">
                                                 {{getCurrency currencyId}}{{formatMoneyNormal dr}}
                                             </td>
@@ -344,7 +344,7 @@
                                     {{/if}}
                                 {{/if}}
                             {{/each}}
-                            <tr style="background-color:lavender">
+                            <!--<tr style="background-color:gray;">
                                 <td colspan="5" align="left">
                                     <b>Total</b>
                                 </td>
@@ -354,16 +354,17 @@
                                 <td align="right">
                                     <b>{{getCurrency content.currencyId}}{{formatMoneyNormal endingCr}}</b>
                                 </td>
-                                <!--<td align="right">
+                                &lt;!&ndash;<td align="right">
                             <b>{{getCurrency content.currencyId}}{{formatMoneyNormal endingAmount}}</b>
-                        </td>-->
+                        </td>&ndash;&gt;
                                 <td align="right">
                                     <b>{{getCurrency content.currencyId}}{{formatMoneyNormal endingBalance}}</b>
                                 </td>
-                            </tr>
+                            </tr>-->
                             </tbody>
                         </table>
 
+                        <!--Footer-->
                     {{/with}}
                     <!--Sign-->
                     {{> ReportSignFooter}}
@@ -377,39 +378,6 @@
             {{/if}}
         </div>
     </div>
-    <!--/#print-data-->
-</template>
 
 
-<template name="acc_CashShow">
-    <div class="box-body">
-        <table>
-            <tr>
-                <td width="200px"><b> Currency</b></td>
-                <td>{{currencyId}}</td>
-                <td></td>
-            </tr>
-        </table>
-
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Account</th>
-                <th>Debit</th>
-                <th>Credit</th>
-            </tr>
-            </thead>
-            <tbody>
-
-            {{#each transaction}}
-                <tr>
-                    <td>{{accountDoc.code}} | {{accountDoc.name}}</td>
-                    <td>{{formatMoneyNormal dr}}</td>
-                    <td>{{formatMoneyNormal cr}}</td>
-                </tr>
-            {{/each}}
-
-            </tbody>
-        </table>
-    </div>
 </template>
