--- a/acc/imports/ui/reports/trialBalance/trialBalance.html
+++ b/acc/imports/ui/reports/trialBalance/trialBalance.html
@@ -1,31 +1,51 @@
 <template name="acc_trialBalanceReport">
+
     <div class="box-body">
         {{#autoForm schema=schema id="acc_trialBalanceReport" action="trialBalanceReportGen" target="_blank"}}
             <div class="animated fadeIn">
-                <div class="row">
-                    <div class="col-md-6">
-                        {{> afQuickField name='branchId'}}
-                    </div>
-                    <div class="col-md-6">
-                        {{> afQuickField name='currencyId'}}
-                    </div>
-                    <div class="col-md-6">
-                        {{> afQuickField name='date'}}
-                    </div>
+                <div class="box box-primary direct-chat direct-chat-success">
+                    <div class="box-header with-border">
+                        <h3 class="box-title" style="font-family: 'Khmer OS Battambang'">ចុចទីនេះដើម្បីបង្ហាញ ឬ លាក់
+                            <span
+                                    class="font-head-panel-en">Form</span></h3>
 
-                    <div class="col-md-6">
-                        {{> afQuickField name='exchangeDate'}}
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i
+                                    class="fa fa-minus"></i>
+                            </button>
+                        </div>
                     </div>
+                    <!-- /.box-header -->
+                    <div class="box-body">
 
+                        <div class="row " style="background: rgb(227, 234, 243); padding: 10px; margin: 0;">
+                            <div class="col-md-6">
+                                {{> afQuickField name='branchId'}}
+                            </div>
+                            <div class="col-md-6">
+                                {{> afQuickField name='currencyId'}}
+                            </div>
+                            <div class="col-md-6">
+                                {{> afQuickField name='date'}}
+                            </div>
 
+                            <div class="col-md-6">
+                                {{> afQuickField name='exchangeDate'}}
+                            </div>
+
+                        </div>
+                        {{> afQuickField name='showNonActive' class="js-switch"}}
+
+                    </div>
+                    <!-- /.box-body -->
+                    <div class="box-footer">
+                        {{> formFooterWithButtonPrintFullscreenReport}}
+                    </div>
+                    <!-- /.box-footer-->
                 </div>
-                {{> afQuickField name='showNonActive' class="js-switch"}}
-
-
-                <button type="submit" class="btn btn-primary">{{fa "file-text"}} Generate</button>
-                <button type="reset" class="btn btn-default">{{fa "refresh"}} Reset</button>
             </div>
         {{/autoForm}}
+        {{> acc_trialBalanceReportPrintData}}
     </div>
 </template>
 
@@ -100,7 +120,8 @@
                                 {{#if isNegative result}} {{else}}{{getCurrency currency}}{{formatMoney result}}{{/if}}
                             </td>
                             <td align="right">
-                                {{#if isNegative result}} {{getCurrency currency}}{{formatMoneyABS result}}{{else}}{{/if}}
+                                {{#if isNegative result}} {{getCurrency currency}}{{formatMoneyABS
+                                        result}}{{else}}{{/if}}
                             </td>
                         </tr>
                     {{/each}}
@@ -125,4 +146,110 @@
     {{/if}}
 
 
+</template>
+<!--Run-->
+<template name="acc_trialBalanceReportPrintData">
+    <!--#print-data-->
+    <div id="print-data">
+        <div class="sub-div display-on-print-div">
+            {{#if rptInit}}
+                {{#if rptData}}
+                    {{#with rptData}}
+
+                        <!--Title-->
+                        {{#with title}}
+                            <div class="rpt-title">
+                                <div class="rpt-title-3x rpt-kh-muol">{{khName}}</div>
+                                <div class="rpt-title-2x">{{enName}}</div>
+                                <div class="rpt-title-2x"><u>Trial Balance Report</u></div>
+                                <div class="rpt-title-2x">{{enAddress}}</div>
+                            </div>
+                        {{/with}}
+
+                        <!--Header-->
+                        {{#with header}}
+                            <div style="width: 100%">
+                                <div style="width: 50%; float: left">
+                                    <ul class="list-unstyled">
+                                        <li><strong>Branch:</strong> {{getBranch branchId}}</li>
+                                    </ul>
+                                </div>
+
+                                <div style="width: 50%; float: right">
+                                    <ul class="list-unstyled">
+                                        <li class="pull-right"><strong>Date:</strong> {{date}}</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div style="width: 100%">
+                                <div style="width: 50%; float: left">
+                                    <ul class="list-unstyled">
+                                        <li><strong>Exchange:</strong> {{exchangeData}}</li>
+                                    </ul>
+                                </div>
+                                <div style="width: 50%; float: right">
+                                    <ul class="list-unstyled">
+                                        <li class="pull-right"><strong>Currency:</strong> {{currencyId}}</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        {{/with}}
+
+                        <!--Content-->
+                        <table class="sub-table table table-striped  table-hover diplay-on-print-table">
+                            <thead class="sub-header diplay-on-print-header">
+                            <tr>
+                                <th width="40px">No</th>
+                                <th>Account</th>
+                                <th>Debit</th>
+                                <th>Credit</th>
+                            </tr>
+                            </thead>
+                            <tbody class="sub-body display-on-print-body">
+                            {{#each result}}
+                                <tr class="transactionDetail report-pointer">
+                                    <td align="center">
+                                        {{order}}
+                                    </td>
+                                    <td>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;{{code}}:{{name}}
+                                    </td>
+                                    <td align="right">
+                                        {{#if isNegative result}} {{else}}{{getCurrency currency}}{{formatMoney
+                                                result}}{{/if}}
+                                    </td>
+                                    <td align="right">
+                                        {{#if isNegative result}} {{getCurrency currency}}{{formatMoneyABS
+                                                result}}{{else}}{{/if}}
+                                    </td>
+                                </tr>
+                            {{/each}}
+                            <tr>
+
+                                <td align="right" colspan="2"><b>Total </b></td>
+                                <td align="right"><b>{{getCurrency currencySelect}}{{formatMoney grandTotalDr}}  </b>
+                                </td>
+                                <td align="right"><b>{{getCurrency currencySelect}}{{formatMoney grandTotalCr}}  </b>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                        <!--Footer-->
+
+                    {{/with}}
+                    <!--Sign-->
+                    {{> ReportSignFooter}}
+
+
+                {{else}}
+                    <div class="text-center">
+                        {{> iconLoading size="fa-5x"}}
+                    </div>
+                {{/if}}
+            {{/if}}
+        </div>
+    </div>
+    <!--/#print-data-->
 </template>
