--- a/pos/imports/ui/pages/invoice.html
+++ b/pos/imports/ui/pages/invoice.html
@@ -93,6 +93,7 @@
                         <thead>
                         <tr>
                             <th><b>Item</b></th>
+                            <th><b>itemId</b></th>
                             <th><b>Unit</b></th>
                             <th><b>Price</b></th>
                             <th><b>Qty</b></th>
@@ -102,15 +103,23 @@
                         </tr>
                         </thead>
                         <tbody>
+                        {{#each items}}
                         <tr>
-                            <td>Iphone 9</td>
-                            <td>unit</td>
-                            <td>5</td>
-                            <td>5.6$</td>
-                            <td>0</td>
-                            <td>28$</td>
-                            <td>28$</td>
+                            <td>{{itemId}}</td>
+                            <td>{{name}}</td>
+                            <td>({{unit}})</td>
+                            <td><input type="number" value={{price}} class="item-price"> </td>
+                            <td><input type="number" value={{qty}} class="item-qty"></td>
+                            <td><input type="number" value={{discount}} class="item-discount"></td>
+                            <td>{{amount}}</td>
+                            <td>
+                                <div class="btn-group btn-group-xs" role="group" aria-label="...">
+                                    <button type="button" class="btn btn-warning item-imei">IMEI</button>
+                                    <button type="button" class="btn btn-danger item-remove"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                                </div>
+                            </td>
                         </tr>
+                        {{/each}}
                         </tbody>
                     </table>
                 </div>
@@ -129,6 +138,48 @@
                 </div>
             </div>
         {{/autoForm}}
+    </div>
+
+    <div class="modal fade" id="imei" data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title"> IMEI </h4>
+                </div>
+                <div class="modal-body">
+                    <input type="text" class="form-control" id="input-imei" placeholder="Add IMEI">
+                    <br>
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>No</th>
+                            <th>IMEI</th>
+                            <th style="width: 10%">Remove</th>
+                        </tr>
+                        </thead>
+                        <tbody class="custom">
+                        {{#each imeis}}
+                            <tr>
+                                <td>{{order}}</td>
+                                <td class="td-imei">{{code}}</td>
+                                <td>
+                                    <a class="btn btn-xs btn-danger btn-remove-imei">
+                                        <i class="fa fa-times"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        {{/each}}
+                        </tbody>
+
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
     </div>
 </template>
 
